src/test/fun-test/semantic/LogicalAndDouble1.java.err
Semantic error: logical operations works with operands of type INT, SHORT, LONG, line 3, pos 14
