src/test/fun-test/semantic/LogicalAndDouble1.java
class Main {
    void main() {
        1.E1 || 0;
    }
}